--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
     background-color: #333;
     color: #fff;
     padding: 1rem;
+    text-align: center;
 }
 
 header h1 {
@@ -24,6 +25,7 @@ header h1 {
 
 nav ul {
     list-style-type: none;
+    text-align: center;
 }
 
 nav ul li {
@@ -38,6 +40,7 @@ nav ul li a {
 
 main {
     padding: 1rem;
+    text-align: center;
 }
 
 section {
@@ -48,6 +51,12 @@ h2 {
     margin-bottom: 1rem;
 }
 
+article {
+    margin-bottom: 2rem;
+    text-align: left;
+}
+
 article h3 {
     margin-bottom: 0.5rem;
 }
+
